<?xml version="1.0"?>

<!--
 Copyright (c) 2020  Carnegie Mellon University

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in all
 copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
-->
<package format="2">
  <name>cabot_navigation</name>
  <version>2.0.0</version>
  <description>The cabot_navigation package</description>
  <maintainer email="daisukes@cmu.edu">Daisuke Sato</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cabot_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>people_msgs</build_depend>
  
  <exec_depend>nav_core</exec_depend>
  <exec_depend>cabot_msgs</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  
  <test_depend>cabot_msgs</test_depend>
  <test_depend>cabot_ui</test_depend>
  <test_depend>rosunit</test_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <costmap_2d plugin="${prefix}/costmap_plugin.xml" />
    <nav_core plugin="${prefix}/planner_plugin.xml" />
  </export>
</package>
